style.css
:root {
    --color-white: white;
    --color-black: black;
    --color-medium-grey: #68696c;
    --color-dark-grey: #1a1c1d;
    --color-light-grey: #d3d5d8;
    --color-light-grey-dropdown: #787878;
    --color-dark-grey-dropdown: #5E5E5E;
    --color-hover-dropdown: #f6f6f7;
    --color-shadow-search-bar: #c3c1c1;
    --color-bg-search-bar: #fdfdfd;
    --color-text-p: #5c5d5f;
    --color-text-links-top-page: #5c5d5f --color-bg-card: #fafbfb;
    --color-border-card: #e5e5e5;
    --color-shadow-card: #dedcdc;
    --color-bg-green-container: #eafaf2;
    --color-first-card-community: #f4f6fe;
    --color-community-cards-title: #202223;
    --color-bg-footer-bottom: #f6f6f7;
    --color-white-box: white;
    --color-li-footer-bottom: #6f7175;


}

* {
    font-family: 'Inter';
}

html {
    margin: 0;
}

body {
    margin: 0;
    word-spacing: -0.5px;
    padding: 0;
    background-color: var(--color-white);
    box-sizing: border-box;
}

body * {
    transition: background-color 200ms linear, border-color 200ms linear;
}


/* navbar */

.navbar {
    position: fixed;
    height: 48px;
    width: 100vw;
    background-color: var(--color-white);
    z-index: 1000;
}

.navbar-content {
    align-items: center;
    width: 100vw;
    margin-top: 8px;
    display: grid;
    grid-template-columns: 170px .95fr .4fr;
}

.hamburguer-icon {
    display: flex;
    display: none;
    align-items: center;
    margin-left: 35px;
}

.fa-bars {
    display: block;
    font-size: 17px;
    color: var(--color-black);
}

.logo-pc-light {
    background-size: 60px 90px;
    cursor: pointer;
    width: 100%;
    height: 100%;
    margin-left: 15px;
    background-image: url("https://cdn.shopify.com/shopifycloud/shopify_dev/assets/shopify-dev-logo-light-100da87d8ee35fb04600643ee9092181cdfb0f4b6db9a4b102b491788560c938.svg");
    background-repeat: no-repeat;
    background-position: left;
}

.logo-pc-dark {
    background-size: 60px 90px;
    cursor: pointer;
    display: none;
    width: 100%;
    height: 100%;
    margin-left: 15px;
    background-image: url("https://cdn.shopify.com/shopifycloud/shopify_dev/assets/shopify-dev-logo-dark-ebe46baa056247a6245a8c2f3f5643850171ff8f505f2cb61303efe710b65390.svg");
    background-repeat: no-repeat;
    background-position: left;
}

.logo-mobile-light {
    background-size: 60px 90px;
    cursor: pointer;
    display: none;
    width: 100%;
    height: 100%;
    margin-left: 15px;
    background-image: url("https://cdn.shopify.com/shopifycloud/shopify_dev/assets/shopify-dev-logo-light-100da87d8ee35fb04600643ee9092181cdfb0f4b6db9a4b102b491788560c938.svg");
    background-repeat: no-repeat;
    background-position: left;
}

.logo-mobile-dark {
    background-size: 60px 90px;
    cursor: pointer;
    display: none;
    width: 100%;
    height: 100%;
    margin-left: 15px;
    background-image: url("https://cdn.shopify.com/shopifycloud/shopify_dev/assets/shopify-dev-logo-dark-ebe46baa056247a6245a8c2f3f5643850171ff8f505f2cb61303efe710b65390.svg");
    background-repeat: no-repeat;
    background-position: left;
}

ul {
    display: flex;
    margin: 0;
    padding: 0;
}

.navbar-link {
    list-style: none;
}

.navbar-link a {
    text-decoration: none;
    font-size: 11px;
    color: var(--color-medium-grey);
    display: block;
    padding: .8rem;
    transition: .1s;
}

.navbar-link:hover a {
    color: var(--color-dark-grey);
}

.dot {
    height: 3.8px;
    width: 3.8px;
    background-color: var(--color-light-grey);
    border-radius: 50%;
    align-self: center;
    margin-right: 7px;
    margin-left: 4px;
}

.apis-references {
    text-decoration: none;
    border: none;
    font-size: 11px;
    color: var(--color-medium-grey);
    background-color: var(--color-white);
    display: block;
    margin-top: 8px;
    cursor: pointer;

}

.apis-references:hover {
    color: var(--color-dark-grey);
}

.arrow {
    width: 11px;
    height: 6px;
    filter: invert(47%) sepia(8%) saturate(186%) hue-rotate(174deg) brightness(91%) contrast(94%);
    ;
    margin-bottom: 2px;
    display: flex;
    align-self: center;
}


/* dropdown */

#dropdown {
    position: absolute;
    width: 165px;
    height: 307px;
    border-radius: .15cm;
    background-color: var(--color-white);
    box-shadow: 1px 2px 18px rgb(235, 234, 234);
    top: 43px;
    margin-left: -117px;
    display: none;
}

.dropdown-menu ul {
    list-style-type: none;
    display: block;
}

.dropdown-title {
    padding: .8rem;
    font-size: 9px;
    color: var(--color-light-grey-dropdown);
}

.dropdown-list-item {
    display: inline-block;
    padding: 0;
    color: var(--color-dark-grey-dropdown);
}

.dropdown-item {
    font-size: 10px;
    padding-left: 10px;
    padding-bottom: .6rem;
    padding-top: .6rem;
    padding-right: .6rem;
    width: 150px;
    transition: .1s ease-in-out;
    display: inline-block;
}

.dropdown-item:hover {
    background-color: var(--color-hover-dropdown);
}

.apis-references:active .dropdown-menu {
    font-weight: 700;
    display: block;
}

.wrap-item {
    margin-bottom: 7px;
}

.dropdown-title-view-all {
    padding-left: 10px;
    padding-bottom: .6rem;
    padding-top: .6rem;
    padding-right: .6rem;
    width: 150px;
    transition: .1s ease-in-out;
    font-size: 10px;
    color: var(--color-dark-grey-dropdown);
}

.dropdown-title-view-all:hover {
    background-color: var(--color-hover-dropdown);
}


/* menu da direita navbar */

.menu-right {
    display: flex;
    align-items: center;
}

.search-bar-container {
    align-items: center;
    display: flex;
    justify-content: left;
}
/* ... */

